name:                TicTacToe
version:             1.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/SebasHollow/Haskell-TicTacToe#readme
author:              Sebas Hollow
maintainer:          Sebas.v.Hollow@gmail.com
copyright:           2015 SebasHollow
category:            Web

Build-Type:        Simple
cabal-version:     >= 1.2

executable TicTacToe
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:       base
                     , utf8-string
                     , containers
                     , hedis
                     , HTTP
                     , text
                     , http-conduit
                     , split
                     , blaze-html
                     , blaze-markup
                     , http-client
                     , http-types
                     , io-streams
                     , aeson
  default-language:    Haskell2010